--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-text-scaler",
-  "version": "0.0.12",
+  "version": "1.0.0",
   "description": "UI and accessibility support scalling text size",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -20,6 +20,7 @@
     "scaling",
     "accessibility"
   ],
+  "author": "S.Watanabe",
   "license": "MIT",
   "dependencies": {
     "react": "^18.2.0",
