--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-text-scaler",
-  "version": "1.0.7",
-  "description": "React Component library for text scaling accessibility.",
+  "version": "2.0.0",
+  "description": "React Component library for text scaling readability.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "repository": {
@@ -19,17 +19,17 @@
     "component",
     "text",
     "scaling",
-    "accessibility"
+    "readability"
   ],
   "author": "S.Watanabe",
   "license": "MIT",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/css-modules": "^1.0.2",
-    "@types/react": "^18.2.14"
+    "@types/css-modules": "^1.0.3",
+    "@types/react": "^18.2.23"
   }
 }
